session1/bloc1/10-netpol/allow-from-host-ips.ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-host-ips
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock:
        cidr: "10.128.0.0/16"
