session1/bloc1/10-netpol/allow-from-kube-apiserver.ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-kube-apiserver
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          k8s-app: kube-apiserver
