session1/bloc1/10-netpol/allow-from-namespace-kube-system.ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-namespace-kube-system
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: kube-system
